<resources>
    <string name="app_name">Classic WMS</string>
    <!--
    <string name="app_version">V1.0</string>
-->
    <string name="enter_user_name">Username</string>
    <string name="enter_password">Password</string>
    <string name="login">Login</string>
    <string name="confirm">Confirm</string>
    <string name="hint_search_asn">Search ASN No</string>
    <string name="new_scanner">Pair New Scanner</string>
    <string name="cancel">Cancel</string>
    <string name="model">Model #: </string>
    <string name="serial">Name: </string>
    <string name="disable">Disable</string>
    <string name="enable">Enable</string>
    <string name="beep">Beep</string>
    <string name="api_error_msg_btn_txt">Retry</string>
    <string name="api_data_empty_msg">No Data Available</string>
    <string name="no_internet_connection_msg_header">Unable to connect to the internet</string>
    <string name="no_internet_connection_msg">It appears that you don’t have an active\ninternet connection.</string>
    <string name="api_error_header_msg">Communication Error</string>
    <string name="api_error_msg">Sorry, we are unable to load your information.</string>
    <string name="retry">Retry</string>
    <string name="no_data_available">No data available</string>
    <string name="ok">OK</string>
    <string name="s_no">S No</string>
    <string name="cases">Cases</string>
    <string name="putaway">Putaway</string>
    <string name="tranfers">Transfers</string>
    <string name="pallet_id">Pallet ID</string>
    <string name="picking_txt">Picking</string>
    <string name="reports_pallet">Pallet ID Report</string>
    <string name="reports_bin">Storage Bin Report</string>
    <string name="reports_item_code">Item Code Report</string>
    <string name="quality_txt">Quality</string>
    <string name="picking_returns">Returns</string>
    <string name="perpetual_txt">Perpetual</string>
    <string name="annual_txt">Annual</string>
    <string name="internet_check_msg">Please check internet Connection</string>
    <string name="internet_check_msg_store_offline">No Internet Connection, Still you data will be stored offline</string>
    <string name="keySendInternetStatus">Broadcast_Internet_Status</string>
    <string name="activity_intent_filter_action">com.tvhht.myapplication.ACTION</string>
    <string name="activity_action_from_service">com.tvhht.myapplication.service.ACTION</string>
    <string name="datawedge_intent_key_source">com.symbol.datawedge.source</string>
    <string name="datawedge_intent_key_label_type">com.symbol.datawedge.label_type</string>
    <string name="datawedge_intent_key_data">com.symbol.datawedge.data_string</string>
    <string name="barcode_id">Barcode ID</string>
    <string name="barcode_code">Barcode</string>
    <string name="order_qty">Order Qty</string>
    <string name="part_no">Part No</string>
    <string name="part_description">Part Description</string>
    <string name="bin_loc">Bin Loc</string>
    <string name="picked_qty">Picked Qty</string>
    <string name="barcode">Barcode</string>
    <string name="barcode_scanned">Barcode Scanned</string>
    <string name="remaining_barcode_to_be_scanned">Remaining Barcode to be scanned</string>
    <string name="verify_part_no">Verify Part No</string>
    <string name="zone">Zone</string>
    <string name="inventory_qty">Inventory Qty</string>
    <string name="item_code">Item Code</string>
    <string name="reason">Reason</string>
    <string name="select_any_one_reason">Select any one reason</string>
    <string name="damaged">Damaged</string>
    <string name="missing">Missing</string>
    <string name="mismatch">Mismatch</string>
    <string name="aisle_block">Aisle Block</string>
    <string name="box_qty">Box Qty</string>
    <string name="bin_location">Bin Location</string>
    <string name="mfr_name">Mfr Name</string>
    <string name="order_no">Order No</string>
    <string name="company_id">Company ID</string>
    <string name="branch_id">Branch ID</string>
    <string name="inv_qty">Inv Qty</string>
    <string name="global_inventory">Global Inventory</string>
    <string name="doc_no">Doc No</string>
    <string name="date">Date</string>
    <string name="status">Status</string>
    <string name="sel">Sel</string>
    <string name="gr">GR</string>
    <string name="invoice_qty">Invoice Qty</string>
    <string name="doc_no_selected">Doc No Selected</string>
    <string name="released_acc_qty">Released Acc Qty</string>
    <string name="released_rej_qty">Released Rej Qty</string>
    <string name="accepted_qty">Accepted Qty</string>
    <string name="rejected_qty">Rejected Qty</string>
    <string name="length">Length</string>
    <string name="width">Width</string>
    <string name="height">Height</string>
    <string name="dimensions_in_cm">Dimensions in cm</string>
    <string name="assign_binner">Assign Binner</string>
    <string name="hht_user_id">HHT User ID</string>
    <string name="hht_user_name">HHT User Name</string>
    <string name="reason_for_rejection">Reason for Rejection</string>
    <string name="trans_qty">Trans Qty</string>
    <string name="select_branch">Select Branch</string>
    <string name="branch">Branch</string>
    <string name="order_type">Order Type</string>
    <string name="barcode_report">Barcode Report</string>
    <string name="gr_excess_qty_message">Enter Quantity Should be less than or equal %d</string>
    <string name="transfer_qty">Transfer Qty</string>
    <string name="order_no_selected">Order No Selected</string>
    <string name="picker">Picker</string>
    <string name="verify_barcode_id">Verify Barcode Id</string>
    <string name="bin_no_scanned">Bin Number Scanned</string>
    <string name="plant">Plant</string>
    <string name="add">Add</string>
    <string name="barcode_exists_message">The barcode exists</string>
    <string name="he_number">HE Number</string>
    <string name="he_no">HE No</string>
    <string name="pick_up_line_record_is_getting_duplicated">PickupLine Record is getting duplicated</string>
    <string name="quality_order_tracking_report">Order Tracking</string>
    <string name="sales_order_no">Sales Order No</string>
    <string name="outbound">OUTBOUND</string>
    <string name="report">REPORT</string>
    <string name="notification_channel_id" translatable="false">almailem_channel</string>
    <string name="notification_channel_name" translatable="true">almailem</string>
</resources>

