<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:id="@+id/lyt_global_inventory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_bg"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:background="@drawable/bg_dialog_header"
            android:paddingStart="@dimen/dp_15"
            android:paddingTop="@dimen/dimen_12dp"
            android:paddingEnd="@dimen/dimen_12dp"
            android:paddingBottom="@dimen/dimen_12dp"
            android:text="@string/global_inventory"
            android:textColor="@color/white_two"
            android:textSize="@dimen/text_size_17sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/lyt_list_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_title"
            android:layout_margin="@dimen/dp_15"
            android:background="@color/pinkish_grey"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_company_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:letterSpacing="-0.03"
                android:padding="@dimen/dp_8"
                android:text="@string/company_id"
                android:textColor="@color/brownish_grey"
                android:textSize="@dimen/text_size_13_5sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_branch_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:letterSpacing="-0.03"
                android:padding="@dimen/dp_8"
                android:text="@string/branch_id"
                android:textColor="@color/brownish_grey"
                android:textSize="@dimen/text_size_13_5sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_inv_qty"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:letterSpacing="-0.03"
                android:padding="@dimen/dp_8"
                android:text="@string/inv_qty"
                android:textColor="@color/brownish_grey"
                android:textSize="@dimen/text_size_13_5sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/global_inventory_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/lyt_button"
            android:layout_marginStart="@dimen/dp_15"
            android:layout_marginEnd="@dimen/dp_15"
            android:layout_below="@+id/lyt_list_header"
            android:clipToPadding="false" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/lyt_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="bottom"
            android:padding="@dimen/dp_15"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_cancel"
                android:layout_width="100dp"
                android:layout_height="@dimen/dp_40"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/button_bg_red"
                android:paddingStart="@dimen/dp_25"
                android:paddingEnd="@dimen/dp_25"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/white_two"
                android:textSize="@dimen/text_size_12sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_confirm"
                android:layout_width="100dp"
                android:layout_height="@dimen/dp_40"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="@dimen/dimen_10dp"
                android:background="@drawable/button_bg_orange"
                android:paddingStart="@dimen/dp_25"
                android:paddingEnd="@dimen/dp_25"
                android:text="@string/confirm"
                android:textAllCaps="false"
                android:textColor="@color/white_two"
                android:textSize="@dimen/text_size_12sp"
                android:visibility="gone" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </RelativeLayout>
</layout>
