<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <include layout="@layout/tool_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_8"
        android:background="@drawable/rectangle_1"
        android:orientation="horizontal"
        android:padding="@dimen/dp_15">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:textAllCaps="true"
                android:textColor="@color/brownish_grey"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:text="WH01" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/quality_order_tracking_report"
                android:textColor="@color/brownish_grey"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:textColor="@color/brownish_grey"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:text="09-02-2024" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_22"
        android:layout_marginTop="@dimen/dimen_12dp"
        android:layout_marginEnd="@dimen/dp_22"
        android:layout_marginBottom="@dimen/dimen_12dp"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/arial"
            android:text="@string/sales_order_no"
            android:textColor="@color/brownish_grey"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp_5"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatAutoCompleteTextView
                android:id="@+id/sales_order_no_auto_complete_view"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:background="@drawable/edittext_bg"
                android:layout_gravity="center"
                android:padding="@dimen/dp_8"
                android:inputType="text"
                android:maxLines="1"/>

            <LinearLayout
                android:id="@+id/lyt_filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/dimen_10dp"
                android:background="@drawable/button_bg_orange"
                android:padding="4dp">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/icon_right_arrow"
                    app:tint="@color/white_two" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lyt_clear_filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/dimen_10dp"
                android:background="@drawable/bg_rounded_grey"
                android:padding="4dp">

                <ImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:padding="3dp"
                    android:src="@drawable/icon_refresh"
                    app:tint="@color/white_two" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_8"
        android:background="@color/pinkish_grey"
        android:orientation="horizontal"
        android:padding="@dimen/dimen_10dp"
        android:weightSum="100">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="17"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_order_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/order_no"
                android:textColor="@color/brownish_grey"
                android:textSize="@dimen/text_size_12sp"
                android:textStyle="bold" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="25"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_part_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/part_no"
                android:textColor="@color/brownish_grey"
                android:textSize="@dimen/text_size_12sp"
                android:textStyle="bold" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_he_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/he_no"
                android:textColor="@color/brownish_grey"
                android:textSize="@dimen/text_size_12sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="18"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_picking_qty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/picked_qty"
                android:textColor="@color/brownish_grey"
                android:textSize="@dimen/text_size_12sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/text_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:text="@string/picker"
                android:textColor="@color/brownish_grey"
                android:textSize="@dimen/text_size_12sp"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/dp_8"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/order_tracking_report_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbarSize="5dp"
            android:scrollbarThumbVertical="@android:color/darker_gray" />

    </FrameLayout>
</LinearLayout>