<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_20"
        android:background="@drawable/dialog_bg"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_dialog_header"
            android:padding="@dimen/dimen_12dp"
            android:text="@string/dimensions_in_cm"
            android:textColor="@color/white_two"
            android:textSize="@dimen/text_size_17sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_length_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_12dp"
            android:layout_marginTop="@dimen/dp_15"
            android:layout_marginEnd="@dimen/dimen_12dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/arial"
            android:letterSpacing="-0.02"
            android:text="@string/length"
            android:textColor="@color/brownish_grey"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_title" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/lyt_length"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_12dp"
            android:layout_marginTop="@dimen/dp_4"
            android:layout_marginEnd="@dimen/dimen_12dp"
            android:background="@drawable/edittext_bg"
            android:padding="@dimen/dp_15"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_length_label">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_txt_length"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:inputType="number"
                android:maxLength="8"
                android:background="@android:color/transparent"
                android:textColor="@color/brownish_grey"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="0" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_width_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_12dp"
            android:layout_marginTop="@dimen/dp_15"
            android:layout_marginEnd="@dimen/dimen_12dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/arial"
            android:letterSpacing="-0.02"
            android:text="@string/width"
            android:textColor="@color/brownish_grey"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lyt_length" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/lyt_width"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_12dp"
            android:layout_marginTop="@dimen/dp_4"
            android:layout_marginEnd="@dimen/dimen_12dp"
            android:background="@drawable/edittext_bg"
            android:padding="@dimen/dp_15"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_width_label">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_txt_width"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:textColor="@color/brownish_grey"
                android:inputType="number"
                android:maxLength="8"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="0" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_height_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_12dp"
            android:layout_marginTop="@dimen/dp_15"
            android:layout_marginEnd="@dimen/dimen_12dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/arial"
            android:letterSpacing="-0.02"
            android:text="@string/height"
            android:textColor="@color/brownish_grey"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lyt_width" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/lyt_height"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_12dp"
            android:layout_marginTop="@dimen/dp_4"
            android:layout_marginEnd="@dimen/dimen_12dp"
            android:background="@drawable/edittext_bg"
            android:padding="@dimen/dp_15"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_height_label">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edt_txt_height"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:inputType="number"
                android:maxLength="8"
                android:background="@android:color/transparent"
                android:textColor="@color/brownish_grey"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:text="0" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/dp_25"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lyt_height">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dimen_10dp"
                android:layout_weight="1"
                android:background="@drawable/button_bg_red"
                android:padding="@dimen/dimen_12dp"
                android:text="@string/cancel"
                android:textColor="@color/white_two"
                android:textSize="@dimen/text_size_12sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_confirm"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_10dp"
                android:layout_weight="1"
                android:background="@drawable/button_bg_orange"
                android:padding="@dimen/dimen_12dp"
                android:text="@string/confirm"
                android:textColor="@color/white_two"
                android:textSize="@dimen/text_size_12sp" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
